# archaResearchAssistant

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  authors.xlsx  backup_neo4j.sh  citations_scopys.py  cleanup.py  create_embeddings.py  docker-compose.yml  documents.xlsx  embed_search_queries.py  environment.yml  example_citations copy.txt  example_citations.txt  llama_test.py  make_chunks.py  modules_list.txt  pyproject.toml  pytest.ini  query_allison_refs_only.py  read_embeddings.py  requirements.txt  start.ps1  start.sh  tasks.ps1  tmp_ask_relevance_check.py  tmp_check_bubeck_sidecar.py  tmp_check_reference_authors.py  tmp_debug_query.py  tmp_debug_refs.py  tmp_import_ra.py  tmp_post_query.sh  tmp_rerun_refs.py  tmp_tail_bubeck.py  trace_allison_reference_drop.py  trace_allison_refsplit.py  (+3 more)
.githooks/: post-commit  pre-commit
.github/: pull_request_template.md
Vault/: Index.md  README.md
anystyle/: Dockerfile
docs/: ANYSTYLE_SETUP.md  CITATION_LOOKUP.md  ENVIRONMENT_NOTES_2026-03-21.md  INDEX.md  MODEL_SETUP.md  NEO4J_REFERENCE_ROUNDTRIP.md  NEW_USER_SETUP.md  OPERATOR_RUNBOOK.md  POWERSHELL_LINUX_COMPATIBILITY_PLAN.md  TROUBLESHOOTING.md  WSL_LAUNCHER.md
pdf2epub/: Knappett.epub  Knappett.md  docker-compose.yml
scripts/: apply_reference_corrections.py  audit_qwen3_reference_split.py  backfill_zotero_identifiers.py  build_graph.py  build_graph_anystyle_test.py  build_query_rewrite_dataset.py  build_qwen_reference_split_jsonl_from_ocr.py  build_qwen_section_chunk_jsonl.py  build_zotero_plugin_xpi.sh  ra.py  (+59 more)
(+199 files in other folders)
